--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "uuid": "^11.0.3"
   }
 }
